* Improved the solution output generation algorithm.   Now it works directly with QTextDocument instead of "feeding" it with HTML.   Thanks to this the solution output generation is now about 1.65 times faster. * Added .txt extension to ChangeLog, INSTALL and README files to simplify opening these files in Windows. * Made a small improvement to Settings Dialog to follow the current application palette. * Output text color if not set is now determmined based on the current application palette.

--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -182,6 +182,9 @@
 	   <property name="statusTip">
 		<string>Solution steps</string>
 	   </property>
+	   <property name="undoRedoEnabled">
+		<bool>false</bool>
+	   </property>
 	   <property name="readOnly">
 		<bool>true</bool>
 	   </property>
