+ Added SStep::next that indicates what branch was selected for the next step. + Added "Show solution graph" option. + New CTSPSolver::getTotalSteps() method that returns a total number of steps in the current solution. * Moved SCandidate declaration into SStep declaration. * Moved everything in tspsolver.h and tspsolver.cpp into TSPSolver namespace. * Force CopyAction on file drop or it will be deleted after dropping in Windows if MoveAction was selected.

--- a/ui/settingsdialog.ui
+++ b/ui/settingsdialog.ui
@@ -288,6 +288,19 @@
 	   </attribute>
 	   <layout class="QVBoxLayout" name="_6">
 		<item>
+		 <widget class="QCheckBox" name="cbShowGraph">
+		  <property name="cursor">
+		   <cursorShape>PointingHandCursor</cursorShape>
+		  </property>
+		  <property name="statusTip">
+		   <string>Show graphical representation of the solution</string>
+		  </property>
+		  <property name="text">
+		   <string>Show solution graph</string>
+		  </property>
+		 </widget>
+		</item>
+		<item>
 		 <widget class="QCheckBox" name="cbShowMatrix">
 		  <property name="cursor">
 		   <cursorShape>PointingHandCursor</cursorShape>
