--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -7,12 +7,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>550</width>
-    <height>450</height>
+    <width>548</width>
+    <height>448</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Travelling Salesman Problem</string>
+   <string/>
   </property>
   <property name="windowIcon">
    <iconset resource="../resources/tspsg.qrc">
@@ -255,7 +255,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>540</width>
+     <width>548</width>
      <height>21</height>
     </rect>
    </property>
