--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -317,9 +317,14 @@
        <normaloff>:/images/icons/preferences-desktop-theme.png</normaloff>:/images/icons/preferences-desktop-theme.png</iconset>
      </property>
     </widget>
+    <widget class="QMenu" name="menuSettingsToolbars">
+     <property name="title">
+      <string>Toolbars</string>
+     </property>
+    </widget>
     <addaction name="menuSettingsLanguage"/>
     <addaction name="menuSettingsStyle"/>
-    <addaction name="actionSettingsToolbars"/>
+    <addaction name="menuSettingsToolbars"/>
     <addaction name="separator"/>
     <addaction name="actionSettingsPreferences"/>
    </widget>
@@ -337,12 +342,12 @@
    <addaction name="menuSettings"/>
    <addaction name="menuHelp"/>
   </widget>
-  <widget class="QToolBar" name="toolBar">
+  <widget class="QToolBar" name="toolBarMain">
    <property name="cursor">
     <cursorShape>ArrowCursor</cursorShape>
    </property>
    <property name="windowTitle">
-    <string>Toolbar</string>
+    <string>Main Toolbar</string>
    </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
@@ -521,6 +526,9 @@
    <property name="iconText">
     <string notr="true">English</string>
    </property>
+   <property name="statusTip">
+    <string notr="true">Set application language to English</string>
+   </property>
   </action>
   <action name="actionFileSave">
    <property name="icon">
@@ -564,18 +572,6 @@
    </property>
    <property name="statusTip">
     <string>Automatically choose the most appropriate style</string>
-   </property>
-  </action>
-  <action name="actionSettingsToolbars">
-   <property name="icon">
-    <iconset resource="../resources/tspsg.qrc">
-     <normaloff>:/images/icons/configure-toolbars.png</normaloff>:/images/icons/configure-toolbars.png</iconset>
-   </property>
-   <property name="text">
-    <string>Toolbars...</string>
-   </property>
-   <property name="statusTip">
-    <string>Customize toolbars</string>
    </property>
   </action>
  </widget>
