* Improved the default font selection logic: The system default monospace (desktop systems)/sans-serif (handheld devices) font is now selected. - Two icons were mixed. Corrected this.

--- a/resources/tspsg.qrc
+++ b/resources/tspsg.qrc
@@ -12,7 +12,7 @@
         <file>icons/document-save.png</file>
         <file>icons/document-save-as.png</file>
         <file>icons/format-text-color.png</file>
-        <file>icons/go-up.png</file>
+        <file>icons/go-previous.png</file>
         <file>icons/help-about.png</file>
         <file>icons/help-contents.png</file>
         <file>icons/help-contextual.png</file>
