--- a/src/3rdparty/qttoolbardialog-2.2_1-opensource/src/qttoolbardialog.qrc
+++ b/src/3rdparty/qttoolbardialog-2.2_1-opensource/src/qttoolbardialog.qrc
@@ -2,7 +2,7 @@
     <qresource prefix="/">
         <file>images/icons/go-down.png</file>
         <file>images/icons/go-next.png</file>
-        <file>images/icons/go-previous.png</file>
+        <file>images/icons/go-up.png</file>
         <file>images/icons/list-add.png</file>
         <file>images/icons/list-remove.png</file>
     </qresource>
